# NarraNexus

./: .env.cloud.example  .env.example  .gitignore  .mailmap  AGENT.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-unified-memory-search.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MEMO-FOR-YING.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  README_advice.md  README_zh.md  REPO_GOVERNANCE_REPORT.md  SECURITY.md  TODO-unified-memory-overhaul.md  _HANDOFF_agent_runtime_isolation.md  docker-compose.yaml  pyproject.toml  run.sh  setup_node.sh
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-question.yml  04-good-first-issue.yml  config.yml
.github/workflows/: build-desktop.yml  ci.yml  deploy.yml  desktop-release.yml  labels-sync.yml  mirror-md-check.yml  semantic-pr-title.yml  stale.yml  welcome.yml
.mindflow/: _overview.md
.mindflow/project/: README.md
.nac_doc/: README.md
_netmind_auth_handoff/: HANDOFF-testing-phase1.md  RESULTS-phase1-testing.md  netmind_probe.mjs
_netmind_auth_handoff/plans/: phase1-frontend-login-migration-plan.md
_netmind_auth_handoff/specs/: phase1-frontend-login-migration.md  phase1-user-system-unification.md
backend/: auth.py  config.py  main.py
backend/integrations/: __init__.py
backend/middleware/: access_log.py
backend/migrations/: m0002_workspace_nested_layout.py
backend/routes/: _artifact_token.py  _dashboard_helpers.py  _dashboard_schema.py  _office_watch_token.py  admin_invite.py  admin_migration.py  admin_quota.py  admin_runtime.py  agents.py  agents_api_keys.py  agents_artifacts.py  agents_attachments.py  agents_bus_failures.py  agents_chat_history.py  agents_circuit_breaker.py  agents_cost.py  agents_files.py  agents_llm_config.py  agents_mcps.py  agents_rag.py  agents_social_network.py  arena.py  artifact_ws.py  artifacts_public.py  auth.py  billing.py  bundle.py  dashboard.py  discord.py  external_api.py  feedback.py  home_assistant.py  inbox.py  invite.py  jobs.py  lark.py  manyfold_agents.py  manyfold_diagnostics.py  manyfold_files.py  manyfold_sync.py  (+19 more)
benchmark/skill_examples/: README.md  skills.yaml
benchmark/test_configs/: job_isolation.yaml  skill_isolation.yaml
desktop/: README.md  electron-builder.yml  package.json  version.json
docker/: .dockerignore  Dockerfile.manyfold
docs/: automated_pr_review.md  external-api.md  manyfold-api.md
docs/design-notes/: template_sharing_2026_05_18.md
drafts/: BENCHMARK_PART1_ARCHITECTURE_REPORT.md  BENCHMARK_PART1_ARCHITECTURE_REPORT_zh.md  BENCHMARK_PART2_AGENT_ABILITY_TESTING_GUIDE.md  BENCHMARK_PART2_AGENT_ABILITY_TESTING_GUIDE_zh.md  BENCHMARK_PART3_MEMORY_TESTING_GUIDE.md  BENCHMARK_PART3_MEMORY_TESTING_GUIDE_zh.md  LOCOMO_UPDATE.md  WORKTREE_SETUP.md  git_squash_merge_clean_pr.md
drafts/Bootstrap/: BOOTSTRAP_CHANGES_20260303.md  BOOTSTRAP_CONFIGURATION_PLAN.md  BOOTSTRAP_UX_IMPROVEMENTS_20260302.md  BOOTSTRAP_WORKING_LOGIC.md
drafts/agent_comunication/: EXPERIMENT_AGENT_PROMPTS.md  GROUP_DISCUSSION_EXPERIMENT.md  MATRIX_AGENT_TO_AGENT_REPORT.md  NOVATECH_BMC_FINAL.md  NOVATECH_DAAS_DISCUSSION.md  NOVATECH_DAAS_Second_try_RAW_TRANSCRIPT.md  NOVATECH_DISCUSSION_First_try_TRANSCRIPT.md  Project outline for the workshop_copy.docx  Reinventing NovaTech (1).docx
drafts/logs/: batch_template_pipeline_2026_05_22.md  cloud_deploy_setup_2026_05_18.md  external_api_v0_4_2026_06_14.md  invite_code_2026_05_14.md  register_onboarding_review_2026_05_21.md  skill_marketplace_design_2026_07_20.md  skill_marketplace_mvp_trial_2026_07_21.md  team_marketplace_2026_07_21.md  template_sharing_2026_05_18.md
drafts/narrative_pipeline/: DECOUPLING_DESIGN.md  NARRATIVE_ACTION_PLAN.md  NARRATIVE_BIG_PICTURE.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  test-setup.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
readme-drafts/: README_A.en.md  README_A.zh.md  README_Aplus.en.md  README_Aplus.zh.md  README_Bplus.en.md  README_Bplus.zh.md
real_case_e2e_test/: README.md  analyze.py  run.py
scripts/: .dev-local-safe.sh  backfill_cost_records_user_id.py  bench_narrative_models.py  build-desktop.sh  check_id_field_coverage.py  check_nac_doc.py  cleanup_duplicate_pinned_artifacts.py  cleanup_skill_state.py  configure_providers.py  db_doctor.py  deploy-cloud.sh  dev-local.sh  dump_short_term_prompt.py  gen_slack_skills.py  generate_seed_dialogues.py  migrate_agents_to_sqlite.py  migrate_to_unified_memory.py  migrate_users_to_netmind.py  migrate_workspace_layout.py  nac_doc_lib.py  offer_all_netmind_models_local.py  publish_batch.py  publish_skill.py  replay_topics.py  run_skill_install_and_qa.py  seed_mixed_chat_history.py  seed_narramessenger_credential.py  smoke_gpt54_models.py  spike_arena_provision.py  spike_codex_approval_probe.py  spike_codex_official_sdk.py  spike_codex_sdk.py  spike_codex_sdk_community_archived.py  test_common_tools_web_search.py  verify_arena_onboarding.py  verify_arena_provision.py  verify_jobs_created.py  verify_release_artifacts.sh  verify_v1_removed.sh  ws_agent_run.py  (+2 more)
start/: all.sh  frontend.sh  telegram-trigger.sh  telegram.sh
tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  state.rs  tray.rs
tauri/src-tauri/src/commands/: artifact_fetch.rs  deep_link.rs  file_download.rs  mod.rs  netmind_oauth.rs  notify.rs  office_watch_scheme.rs  power.rs  updater.rs
tauri/src-tauri/src/sidecar/: lark_preflight.rs  mod.rs  port_preflight.rs  process_manager.rs
tests/: conftest.py  test_channel_im_short_term.py  test_check_nac_doc.py  test_db_backend_interface.py  test_db_backend_sqlite.py  test_db_factory.py  test_external_identity.py  test_im_short_term_repository.py  test_lark_command_security.py  test_lark_context_builder.py  test_lark_trigger_helpers.py  test_lark_workspace.py  test_local_bus.py  test_nac_doc_lib.py  test_scaffold_nac_doc.py  test_workspace_paths_distrust.py
(+2460 files in other folders)
