[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xyz-agent-context"
version = "1.9.0"
description = "XYZ Agent Context Framework for multi-agent systems"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.72.0",
    "claude-agent-sdk~=0.1.43",
    "openai>=2.7.1",
    "openai-agents>=0.5.0",
    # Official OpenAI Codex SDK — drives CodexSDKv2 (the v2 agent-loop
    # driver registered under `codex_cli_v2`). Pinned to 0.1.x because
    # the package is beta — accept patch/beta bumps inside 0.1, but
    # treat 0.2 as a breaking change requiring deliberate upgrade.
    # Transitively pulls openai-codex-cli-bin (the codex binary as a
    # wheel) so users no longer need `npm install -g @openai/codex`.
    "openai-codex>=0.1.0b3,<0.2",
    "mcp[cli]>=1.20.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.2.0",
    "croniter>=6.0.0",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.20.0",
    "google-genai>=1.0.0",
    "fastmcp>=2.14.1",
    "numpy>=1.26.0",
    "httpx[socks]",
    "bcrypt>=5.0.0",
    "pyjwt>=2.10.1",
    "lark-oapi>=1.4.0,<2.0.0",
    "slack-sdk>=3.27.0",
    "discord.py>=2.4.0",
    # matrix-nio — Matrix client library for NarraMessenger MatrixTrigger
    # (replaces polling long-poll on the message plane). Pinned to the
    # non-`[e2e]` variant on purpose: matrix.netmind.chat rooms are
    # confirmed plaintext by default (2026-07-02 probe), so we skip
    # libolm and its native-C build burden. If encryption ever gets
    # turned on server-side, switch to `matrix-nio[e2e]`.
    "matrix-nio>=0.25.0",
    "aiohttp>=3.9.0",
    "ddgs>=9.0.0",
    "websockets>=15.0.1",
    "tiktoken>=0.13.0",
    "posthog>=7.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xyz_agent_context", "backend"]

[tool.uv]
# Allow pre-release versions during resolution. Currently REQUIRED so
# ``openai-codex`` 0.1.0b3 + its transitive ``openai-codex-cli-bin``
# 0.137.0a4 (the wheel that ships the codex binary) resolve cleanly.
# Once those packages reach stable (1.0), tighten this back.
prerelease = "allow"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Start conservative — only catch clear bugs, not style
select = ["E", "F"]
# Ignore rules that conflict with existing codebase patterns
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top (lazy imports are intentional)
    "E721",   # type comparison using == (existing patterns)
    "E741",   # ambiguous variable name
    "F401",   # unused imports (too many false positives with re-exports)
    "F811",   # redefinition of unused name
    "F821",   # undefined name (false positives with forward refs and method scope)
    "F841",   # local variable assigned but never used
]

[tool.ruff.lint.isort]
known-first-party = ["xyz_agent_context", "backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Make `uv run pytest` work without a manual PYTHONPATH or editable install:
# `src` for the xyz_agent_context package, `.` for the backend package.
pythonpath = ["src", "."]
