[package]
name = "narranexus"
version = "1.7.5"
edition = "2021"

[lib]
name = "narranexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `image-png` is required for `Image::from_bytes` (tray.rs) to compile — that
# constructor is cfg-gated behind `image-ico`/`image-png`. The tray icon is a
# PNG, so without this feature `from_bytes` silently disappears and the desktop
# build fails with E0599 "no function named from_bytes".
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
# Prevents a second NarraNexus instance from spawning a duplicate sidecar
# stack on top of the live one — root cause of repeated-launch port
# collisions. Second-launch now hands its argv off to the live process and
# exits, which raises the existing window via the init() callback.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# Handles narranexus:// URL scheme for one-click template install from the
# website. Bundler writes CFBundleURLTypes into Info.plist (see
# tauri.conf.json plugins.deep-link), and the runtime callback forwards
# received URLs as Tauri events to the webview (src/lib.rs setup hook).
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Used by sidecar/process_manager.rs to send SIGTERM before the SIGKILL
# fallback. tokio's Child::kill is SIGKILL-only, which gives Python sidecars
# zero chance to flush DB / sockets / loguru's enqueue=True buffer.
libc = "0.2"
